@@ -35,7 +35,7 @@ MAN8	= ../man/actsync.8 ../man/archive.8 ../man/auth_krb5.8 \
 	../man/domain.8 ../man/expire.8 ../man/expireover.8 \
 	../man/expirerm.8 ../man/ident.8 \
 	../man/innbind.8 ../man/inncheck.8 ../man/innd.8 ../man/inndf.8 \
-	../man/innfeed.8 ../man/innupgrade.8 \
+	../man/innfeed.8 ../man/innupgrade.8 ../man/innwatch.8 \
 	../man/innxmit.8 \
 	../man/makedbz.8 ../man/makehistory.8 ../man/mod-active.8 \
 	../man/news.daily.8 ../man/news2mail.8 ../man/ninpaths.8 \
@@ -134,6 +134,7 @@ maintclean: distclean
 ../man/inndf.8:		inndf.pod		; $(POD2MAN) -s 8 $? > $@
 ../man/innfeed.8:	innfeed.pod		; $(POD2MAN) -s 8 $? > $@
 ../man/innupgrade.8:	innupgrade.pod		; $(POD2MAN) -s 8 $? > $@
+../man/innwatch.8:	innwatch.pod		; $(POD2MAN) -s 8 $? > $@
 ../man/innxmit.8:	innxmit.pod		; $(POD2MAN) -s 8 $? > $@
 ../man/makedbz.8:	makedbz.pod		; $(POD2MAN) -s 8 $? > $@
 ../man/makehistory.8:	makehistory.pod		; $(POD2MAN) -s 8 $? > $@
